force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <label>Case Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Online Order</fullName>
            </value>
            <value>
                <fullName>Order Request</fullName>
            </value>
            <value>
                <fullName>Order Cancellation</fullName>
            </value>
            <value>
                <fullName>Order Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>