force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Online Order Inquiry</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>