force-app/main/default/objects/Case/fields/Closed_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Case_Reason__c</fullName>
    <label>Closed Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>