force-app/main/default/objects/Case/fields/Liner_brand__c.field-meta.xml
<CustomField>
    <fullName>Liner_brand__c</fullName>
    <label>Liner brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
                <default>true</default>
                <label>Retail</label>
            </value>
            <value>
                <fullName>Liquor</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>