force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bread &amp; Bakery</fullName>
            </value>
            <value>
                <fullName>Fruit &amp; Vegetables</fullName>
            </value>
            <value>
                <fullName>Meat, Seafood &amp; Deli</fullName>
            </value>
            <value>
                <fullName>Dairy, Eggs and Meals</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>Convenience Meals</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
            <value>
                <fullName>Liquor</fullName>
            </value>
            <value>
                <fullName>International Foods</fullName>
            </value>
            <value>
                <fullName>Healthy Living</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
            </value>
            <value>
                <fullName>Baby</fullName>
            </value>
            <value>
                <fullName>Pet</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>