force-app/main/default/objects/Case/fields/SLA__Exceeded_SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__Exceeded_SLA__c</fullName>
    <formula>AND(
IsClosed = false,
$CustomMetadata.SLA__Service_Level_Agreement__mdt.SLA__SLA.SLA__SLA_Enabled__c = true,
(((NOW() - CreatedDate )*24) &gt; $CustomMetadata.SLA__Service_Level_Agreement__mdt.SLA__SLA.SLA__Hours__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceeded SLA</label>
    <type>Checkbox</type>
</CustomField>