force-app/main/default/objects/Case/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <label>Store Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coles Endeavour Hills (VIC)</fullName>
            </value>
            <value>
                <fullName>Coles Essendon (VIC)</fullName>
            </value>
            <value>
                <fullName>Coles Footscray (VIC)</fullName>
            </value>
            <value>
                <fullName>Coles Glenroy (VIC)</fullName>
            </value>
            <value>
                <fullName>Coles Kew (VIC)</fullName>
            </value>
            <value>
                <fullName>Coles Oakleigh (VIC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>