force-app/main/default/objects/Case/fields/Suppress_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Email Alerts</label>
    <type>Checkbox</type>
</CustomField>