force-app/main/default/objects/Case/fields/Time_remaining_to_close__c.field-meta.xml
<CustomField>
    <fullName>Time_remaining_to_close__c</fullName>
    <formula>TIMEVALUE(NOW())+1</formula>
    <label>Time remaining to close</label>
    <type>Time</type>
</CustomField>