force-app/main/default/objects/Case/listViews/LiquorServicecenter_Case.listView-meta.xml
<ListView>
    <fullName>LiquorServicecenter_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>LiquorServiceCenter</label>
    <queue>LiquorServiceCenter</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>