force-app/main/default/objects/Case/listViews/RetailServiceCenter_Case.listView-meta.xml
<ListView>
    <fullName>RetailServiceCenter_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>RetailServiceCenter</label>
    <queue>RetailServiceCenter</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>