force-app/main/default/objects/Case/listViews/Wholesaleservicecenter_Case.listView-meta.xml
<ListView>
    <fullName>Wholesaleservicecenter_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>WholesaleServiceCenter</label>
    <queue>WholesaleServiceCenter</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>